--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "eslint": "^8.42.0",
-    "jest": "^29.5.0"
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.6.0"
   }
 }
